--- a/pipeline-job/pom.xml
+++ b/pipeline-job/pom.xml
@@ -12,4 +12,15 @@
   <artifactId>pipeline-job</artifactId>
 
 
+  <dependencies>
+    <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-stage</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+  </dependencies>
 </project>
