--- a/pipeline-common/pom.xml
+++ b/pipeline-common/pom.xml
@@ -32,5 +32,9 @@
       <groupId>io.dropwizard.metrics</groupId>
       <artifactId>metrics-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-json</artifactId>
+    </dependency>
   </dependencies>
 </project>
