--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,10 @@
     <module>pipeline-stage</module>
     <module>pipeline-extract</module>
     <module>pipeline-job</module>
+    <module>pipeline-spark</module>
+    <module>pipeline-kafka-0-8</module>
+    <module>pipeline-kafka-0-10</module>
+    <module>pipeline-kafka</module>
   </modules>
 
   <properties>
@@ -30,7 +34,11 @@
     <joda.time.version>2.9.5</joda.time.version>
     <metrics.version>3.2.3</metrics.version>
     <log4j.version>1.2.17</log4j.version>
-
+    <spark.version>2.2.1</spark.version>
+    <scala.version>2.11.5</scala.version>
+    <scala.binary.version>2.11</scala.binary.version>
+    <kafka08.version>0-8</kafka08.version>
+    <kafka010.version>0-10</kafka010.version>
     <scala.version>2.11.5</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
     <spark.version>2.2.1</spark.version>
@@ -95,6 +103,11 @@
         <artifactId>metrics-core</artifactId>
         <version>${metrics.version}</version>
       </dependency>
+      <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-json</artifactId>
+        <version>${metrics.version}</version>
+      </dependency>
       <!-- end metrics-->
       <!-- start log4j-->
       <dependency>
@@ -108,6 +121,50 @@
         <version>1.7.22</version>
       </dependency>
       <!-- end log4j-->
+      <!-- start spark-->
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-streaming_${scala.binary.version}</artifactId>
+        <version>${spark.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-sql_${scala.binary.version}</artifactId>
+        <version>${spark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-sql-kafka-${kafka010.version}_${scala.binary.version}</artifactId>
+        <version>${spark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-streaming_${scala.binary.version}</artifactId>
+        <version>${spark.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-streaming-kafka-${kafka08.version}_${scala.binary.version}</artifactId>
+        <version>${spark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-streaming-kafka-${kafka010.version}_${scala.binary.version}</artifactId>
+        <version>${spark.version}</version>
+      </dependency>
+      <!-- end spark-->
     </dependencies>
   </dependencyManagement>
 
