add spark processor

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <scala.binary.version>2.11</scala.binary.version>
     <kafka08.version>0-8</kafka08.version>
     <kafka010.version>0-10</kafka010.version>
+    <kafka_010.version>0.10.2.1</kafka_010.version>
     <scala.version>2.11.5</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
     <spark.version>2.2.1</spark.version>
@@ -165,6 +166,17 @@
         <version>${spark.version}</version>
       </dependency>
       <!-- end spark-->
+      <!-- start kafka-->
+      <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka_${scala.binary.version}</artifactId>
+        <version>${kafka_010.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka-clients</artifactId>
+        <version>${kafka_010.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
