--- a/pipeline-spark/pom.xml
+++ b/pipeline-spark/pom.xml
@@ -49,6 +49,10 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka_${scala.binary.version}</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
