--- a/pipeline-spark/pom.xml
+++ b/pipeline-spark/pom.xml
@@ -16,31 +16,10 @@
   <dependencies>
     <dependency>
       <groupId>oil-pipeline</groupId>
-      <artifactId>pipeline-job</artifactId>
+      <artifactId>pipeline-spark-api</artifactId>
       <version>${parent.version}</version>
     </dependency>
-    <dependency>
-      <groupId>oil-pipeline</groupId>
-      <artifactId>pipeline-util</artifactId>
-      <version>${parent.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>oil-pipeline</groupId>
-      <artifactId>pipeline-extract</artifactId>
-      <version>${parent.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql_${scala.binary.version}</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-sql-kafka-${kafka010.version}_${scala.binary.version}</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming_${scala.binary.version}</artifactId>
-    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
