--- a/pipeline-api/pom.xml
+++ b/pipeline-api/pom.xml
@@ -9,25 +9,9 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>pipeline-common</artifactId>
-
+  <artifactId>pipeline-api</artifactId>
 
   <dependencies>
-    <dependency>
-      <groupId>oil-pipeline</groupId>
-      <artifactId>pipeline-util</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-    </dependency>
-
     <dependency>
       <groupId>io.dropwizard.metrics</groupId>
       <artifactId>metrics-core</artifactId>
