--- a/pipeline-extract/pom.xml
+++ b/pipeline-extract/pom.xml
@@ -15,7 +15,7 @@
   <dependencies>
     <dependency>
       <groupId>oil-pipeline</groupId>
-      <artifactId>pipeline-common</artifactId>
+      <artifactId>pipeline-api</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
