--- a/pipeline-kafka-0-10/pom.xml
+++ b/pipeline-kafka-0-10/pom.xml
@@ -14,9 +14,10 @@
   <dependencies>
     <dependency>
       <groupId>oil-pipeline</groupId>
-      <artifactId>pipeline-spark</artifactId>
+      <artifactId>pipeline-spark-api</artifactId>
       <version>${parent.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming-kafka-${kafka010.version}_${scala.binary.version}</artifactId>
