--- a/pipeline-kafka-0-8/pom.xml
+++ b/pipeline-kafka-0-8/pom.xml
@@ -12,12 +12,12 @@
   <artifactId>pipeline-kafka-0-8</artifactId>
 
   <dependencies>
-
     <dependency>
       <groupId>oil-pipeline</groupId>
-      <artifactId>pipeline-spark</artifactId>
+      <artifactId>pipeline-spark-api</artifactId>
       <version>${parent.version}</version>
     </dependency>
+
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming-kafka-${kafka08.version}_${scala.binary.version}</artifactId>
