--- a/pipeline-monitor/pom.xml
+++ b/pipeline-monitor/pom.xml
@@ -11,5 +11,16 @@
 
   <artifactId>pipeline-monitor</artifactId>
 
-
+  <dependencies>
+    <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
