--- a/pipeline-stage/pom.xml
+++ b/pipeline-stage/pom.xml
@@ -16,7 +16,7 @@
 
     <dependency>
       <groupId>oil-pipeline</groupId>
-      <artifactId>pipeline-common</artifactId>
+      <artifactId>pipeline-api</artifactId>
       <version>${parent.version}</version>
     </dependency>
     <dependency>
