--- a/pipeline-spark-api/pom.xml
+++ b/pipeline-spark-api/pom.xml
@@ -11,8 +11,17 @@
 
   <artifactId>pipeline-spark-api</artifactId>
 
-  <dependencies>
 
+  <dependencies>
+    <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-api</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_${scala.binary.version}</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming_${scala.binary.version}</artifactId>
