add kafka diff version source adn provider, remove stage metricsregistry for spark serialize,update map processor,test runner ,add spark tables extractor,

--- a/pipeline-kafka-0-10/pom.xml
+++ b/pipeline-kafka-0-10/pom.xml
@@ -18,6 +18,11 @@
       <version>${parent.version}</version>
     </dependency>
     <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-kafka</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka-clients</artifactId>
       <version>${kafka_010.version}</version>
@@ -25,7 +30,12 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-streaming-kafka-${kafka010.version}_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.kafka</groupId>
+          <artifactId>kafka_2.11</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
