--- a/pipeline-kafka-0-8/pom.xml
+++ b/pipeline-kafka-0-8/pom.xml
@@ -18,6 +18,11 @@
       <version>${parent.version}</version>
     </dependency>
     <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-kafka</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.kafka</groupId>
       <artifactId>kafka_${scala.binary.version}</artifactId>
       <version>${kafka_080.version}</version>
