--- a/pipeline-spark-kafka-0-10/pom.xml
+++ b/pipeline-spark-kafka-0-10/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>pipeline-kafka-0-8</artifactId>
+  <artifactId>pipeline-spark-kafka-0-10</artifactId>
 
   <dependencies>
     <dependency>
@@ -19,26 +19,27 @@
     </dependency>
     <dependency>
       <groupId>oil-pipeline</groupId>
-      <artifactId>pipeline-kafka</artifactId>
+      <artifactId>pipeline-spark-kafka</artifactId>
       <version>${parent.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka_${scala.binary.version}</artifactId>
-      <version>${kafka_080.version}</version>
+      <artifactId>kafka-clients</artifactId>
+      <version>${kafka_010.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
-      <artifactId>spark-streaming-kafka-${kafka08.version}_${scala.binary.version}</artifactId>
-      <version>${spark.version}</version>
+      <artifactId>spark-streaming-kafka-${kafka010.version}_${scala.binary.version}</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.kafka</groupId>
+          <artifactId>kafka_2.11</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.apache.kafka</groupId>
-      <artifactId>kafka_2.11</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>joda-time</groupId>
-      <artifactId>joda-time</artifactId>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql-kafka-${kafka010.version}_${scala.binary.version}</artifactId>
     </dependency>
   </dependencies>
 
