--- a/pipeline-spark-engine/pom.xml
+++ b/pipeline-spark-engine/pom.xml
@@ -40,6 +40,11 @@
       <version>${parent.version}</version>
     </dependency>
     <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-kafka</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql-kafka-${kafka010.version}_${scala.binary.version}</artifactId>
       <exclusions>
@@ -62,10 +67,15 @@
       <artifactId>kafka_${scala.binary.version}</artifactId>
     </dependency>
 
-    <!-- kafka source-->
+    <!-- kafka source and sink-->
     <dependency>
       <groupId>oil-pipeline</groupId>
       <artifactId>pipeline-spark-kafka-0-10</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-kafka-0-10</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
