--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,9 @@
     <module>pipeline-spark-kafka-0-8</module>
     <module>pipeline-spark-kafka-0-10</module>
     <module>pipeline-spark-api</module>
+    <module>pipeline-kafka</module>
+    <module>pipeline-kafka-0-8</module>
+    <module>pipeline-kafka-0-10</module>
   </modules>
 
   <properties>
