--- a/pipeline-stage/pom.xml
+++ b/pipeline-stage/pom.xml
@@ -21,6 +21,11 @@
     </dependency>
     <dependency>
       <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-metrics</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>oil-pipeline</groupId>
       <artifactId>pipeline-processor</artifactId>
       <version>${parent.version}</version>
     </dependency>
