--- a/pipeline-kafka/pom.xml
+++ b/pipeline-kafka/pom.xml
@@ -19,6 +19,11 @@
       <version>${parent.version}</version>
     </dependency>
     <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-metrics</artifactId>
+      <version>${parent.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
