--- a/pipeline-metrics/pom.xml
+++ b/pipeline-metrics/pom.xml
@@ -20,5 +20,9 @@
       <groupId>io.dropwizard.metrics</groupId>
       <artifactId>metrics-json</artifactId>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
   </dependencies>
 </project>
