add metrics reporter and reporter, sink from config

--- a/pipeline-metrics-prometheus/pom.xml
+++ b/pipeline-metrics-prometheus/pom.xml
@@ -25,5 +25,9 @@
       <groupId>io.prometheus</groupId>
       <artifactId>simpleclient_dropwizard</artifactId>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
   </dependencies>
 </project>
