--- a/pipeline-metrics/pom.xml
+++ b/pipeline-metrics/pom.xml
@@ -13,6 +13,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>io.dropwizard.metrics</groupId>
       <artifactId>metrics-core</artifactId>
     </dependency>
