--- a/pipeline-metrics/pom.xml
+++ b/pipeline-metrics/pom.xml
@@ -26,6 +26,10 @@
       <artifactId>metrics-json</artifactId>
     </dependency>
     <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
