--- a/pipeline-extract/pom.xml
+++ b/pipeline-extract/pom.xml
@@ -24,6 +24,11 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-util</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
