--- a/pipeline-spark-kafka-0-8/pom.xml
+++ b/pipeline-spark-kafka-0-8/pom.xml
@@ -41,6 +41,14 @@
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
     </dependency>
+    <dependency>
+      <groupId>net.jpountz.lz4</groupId>
+      <artifactId>lz4</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.zookeeper</groupId>
+      <artifactId>zookeeper</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
