--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
     <hadoop.version>2.5.0-cdh5.3.2</hadoop.version>
     <zookeeper.version>3.4.5</zookeeper.version>
     <prometheus.client>0.5.0</prometheus.client>
+    <zookeeper.version>3.4.6</zookeeper.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -171,7 +172,7 @@
         <artifactId>spark-streaming-kafka-${kafka010.version}_${scala.binary.version}</artifactId>
         <version>${spark.version}</version>
       </dependency>
-
+      <!-- end spark-->
       <!-- prometheus -->
       <dependency>
         <groupId>io.prometheus</groupId>
@@ -184,8 +185,19 @@
         <version>${prometheus.client}</version>
       </dependency>
 
-      <!-- end spark-->
-      <!-- start kafka-->
+      <dependency>
+        <groupId>net.jpountz.lz4</groupId>
+        <artifactId>lz4</artifactId>
+        <version>1.3.0</version>
+      </dependency>
+
+      <!-- start zookeeper-->
+      <dependency>
+        <groupId>org.apache.zookeeper</groupId>
+        <artifactId>zookeeper</artifactId>
+        <version>${zookeeper.version}</version>
+      </dependency>
+
       <!--<dependency>
         <groupId>org.apache.kafka</groupId>
         <artifactId>kafka_${scala.binary.version}</artifactId>
