dropwizard to prometheus add rate

--- a/pipeline-metrics/src/main/resources/metrics.properties
+++ b/pipeline-metrics/src/main/resources/metrics.properties
@@ -11,3 +11,10 @@ dropwizard_slf.unit=SECONDS
 #prometheus_console.class=com.weibo.dip.pipeline.metrics.PrometheusConsoleSink
 #prometheus_console.period=1
 #prometheus_console.unit=SECONDS
+
+# pushgateway
+pushgateway.class=com.weibo.dip.pipeline.metrics.PushGatewaySink
+pushgateway.period=10
+pushgateway.unit=SECONDS
+pushgateway.job=test_push
+pushgateway.url=localhost:9091
