--- a/pipeline-engine/pom.xml
+++ b/pipeline-engine/pom.xml
@@ -40,7 +40,11 @@
       <artifactId>pipeline-kafka-0-8</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
-
+    <dependency>
+      <groupId>oil-pipeline</groupId>
+      <artifactId>pipeline-metrics-prometheus</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
