test streaming kafka receiver,change parse hashmap to linkmap,add carbondata

--- a/pipeline-metrics/pom.xml
+++ b/pipeline-metrics/pom.xml
@@ -33,5 +33,9 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-jvm</artifactId>
+    </dependency>
   </dependencies>
 </project>
