--- a/pipeline-metrics/src/main/resources/metrics.properties
+++ b/pipeline-metrics/src/main/resources/metrics.properties
@@ -1,7 +1,7 @@
 # dropwizard
-#dropwizard_console.class=com.weibo.dip.pipeline.metrics.DropwizardConsoleSink
-#dropwizard_console.period=10
-#dropwizard_console.unit=SECONDS
+dropwizard_console.class=com.weibo.dip.pipeline.metrics.DropwizardConsoleSink
+dropwizard_console.period=5
+dropwizard_console.unit=SECONDS
 # slf4j
 dropwizard_slf.class=com.weibo.dip.pipeline.metrics.Slf4jMetricsSink
 dropwizard_slf.period=10
